add changes and refactoring issues
