# mvcRestApi_approach/controllers/users/users_controller.go
@@ -1,8 +1,8 @@
 package users
 
 import (
-	"golangNorthwindRestApi/mvcRestApi/domain/users"
-	"golangNorthwindRestApi/mvcRestApi/services"
+	"golangNorthwindRestApi/mvcRestApi_approach/domain/users"
+	"golangNorthwindRestApi/mvcRestApi_approach/services"
 	"golangNorthwindRestApi/utils/rest_errors"
 	"net/http"
 	"strconv"
@@ -18,6 +18,13 @@ func getUserId(userIdParam string) (int64, rest_errors.RestErr) {
 	return userId, nil
 }
 
+// @Summary Create user
+// @Tags User
+// @Accept json
+// @Produce  json
+// @Param request body users.User true "User Data"
+// @Success 200 {object} users.User "ok"
+// @Router /users [post]
 func Create(c *gin.Context) {
 	var user users.User
 	if err := c.ShouldBindJSON(&user); err != nil {
@@ -35,6 +42,12 @@ func Create(c *gin.Context) {
 	c.JSON(http.StatusCreated, result.Marshall(c.GetHeader("X-Public") == "true"))
 }
 
+// @Summary Get user
+// @Tags User
+// @Accept json
+// @Produce  json
+// @Success 200 {integer} int "ok"
+// @Router /users/{user_id} [get]
 func GetUser(c *gin.Context) {
 	userId, idErr := getUserId(c.Param("user_id"))
 	if idErr != nil {
@@ -50,6 +63,13 @@ func GetUser(c *gin.Context) {
 	c.JSON(http.StatusOK, result.Marshall(c.GetHeader("X-Public") == "true"))
 }
 
+// @Summary update user
+// @Tags User
+// @Accept json
+// @Produce  json
+// @Param request body users.User true "User Data"
+// @Success 200 {object} users.User "ok"
+// @Router /users  [put]
 func UpdateUser(c *gin.Context) {
 	userId, idErr := getUserId(c.Param("user_id"))
 	if idErr != nil {
@@ -76,6 +96,12 @@ func UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusOK, result.Marshall(c.GetHeader("X-Public") == "true"))
 }
 
+// @Summary delete user
+// @Tags User
+// @Accept json
+// @Produce  json
+// @Success 200 {string} string "ok"
+// @Router /users/{user_id} [delete]
 func DeleteUser(c *gin.Context) {
 	userId, idErr := getUserId(c.Param("user_id"))
 	if idErr != nil {
@@ -89,6 +115,13 @@ func DeleteUser(c *gin.Context) {
 	c.JSON(http.StatusOK, map[string]string{"status": "deleted"})
 }
 
+// @Summary search by status
+// @Tags User
+// @Accept json
+// @Produce  json
+// @Param request body string true "User Data"
+// @Success 200 {object} users.Users "ok"
+// @Router /users//search [get]
 func Search(c *gin.Context) {
 	status := c.Query("status")
 
@@ -98,4 +131,27 @@ func Search(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, users.Marshall(c.GetHeader("X-Public") == "true"))
+}
+
+// @Summary login user
+// @Tags User
+// @Accept json
+// @Produce  json
+// @Param request body users.LoginRequest true "User Data"
+// @Success 200 {object} users.User "ok"
+// @Router /users//login [post]
+func Login(c *gin.Context) {
+	var request users.LoginRequest
+	if err := c.ShouldBindJSON(&request); err != nil {
+		restErr := rest_errors.NewBadRequestError("invalid json body")
+		c.JSON(restErr.Status(), restErr)
+		return
+	}
+
+	user, err := services.UsersService.LoginUser(request)
+	if err != nil {
+		c.JSON(err.Status(), err)
+		return
+	}
+	c.JSON(http.StatusOK, user.Marshall(c.GetHeader("X-Public") == "true"))
 }
