# mvcRestApi_approach/domain/users/user_login_request.go
@@ -1,0 +1,6 @@
+package users
+
+type LoginRequest struct {
+	Email 		string `json:"email"`
+	Password 	string `json:"password"` 
+}
